tests/traci/set_variable/TrafficLight/errors/invalid_phase_index/testclient_out.traci
TraCITestClient output file. Date: Tue Sep 26 11:10:57 2017


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SetValue>:
  domID=194 varID=44 objID=1/1
.. Command acknowledged (194), [description: ]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SetValue>:
  domID=194 varID=44 objID=1/1
.. Answered with error to command (194), [description: set program: parameter index must be less than parameter phase number.]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
